--- a/site/styles.css
+++ b/site/styles.css
@@ -158,4 +158,14 @@ footer {
   margin-right: 5px;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+}
+
 
