--- a/site/styles.css
+++ b/site/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: Arial, sans-serif;
+  font-size: 18px;
   margin: 0;
   padding: 0;
 }
@@ -38,8 +39,10 @@ nav a {
 
 main {
   padding: 1em;
-  text-align: justify;
   margin: 20px;
+}
+main p {
+  text-align: justify;
 }
 
 main li {
@@ -100,13 +103,6 @@ footer {
   margin-bottom:40px;
 }
 
-/*from deleted blog page*/
-.dialogue {
-  font-size: 18px;
-  color: #818181;
-  font-style: italic;
-}
-
 
 .hamburger {
     font-size: 25px;
@@ -124,6 +120,10 @@ footer {
 }
 
 .contact-container {
+  text-align: center;
+}
+
+.contact-container p {
   text-align: center;
 }
 
